--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-csv</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
